[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kizano"
version = "1.0.6"
requires-python = ">=3.1"
dependencies = [ "PyYAML>=6.0.1" ]
authors = [
  {name = "Markizano Draconus", email = "markizano@markizano.net"},
]
maintainers = [
  {name = "Markizano Draconus", email = "markizano@markizano.net"},
]
description = "Library of functions that have served me no matter where I code."
readme = "README.md"
license = {file = "LICENSE.txt"}

classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python"
]

[project.urls]
Homepage = "https://markizano.net"
Documentation = "https://docs.markizano.net"
Repository = "https://github.com/markizano/libkizano.py"
"Bug Tracker" = "https://github.com/markizano/libkizano.py/issues"
Changelog = "https://github.com/markizano/libkizano.py/blob/master/CHANGELOG.md"

[project.scripts]
log = "kizano.logger:syslogger"
